Started front-end components

--- a/backend/kas/src/main/resources/application.properties
+++ b/backend/kas/src/main/resources/application.properties
@@ -6,3 +6,13 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
+
+# Huidige actieve profile
+spring.profiles.active=demo
+
+# Database config stuff, purely for local testing
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
