--- a/backend/kas/pom.xml
+++ b/backend/kas/pom.xml
@@ -19,6 +19,13 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+		</dependency>
+
+
+		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>3.0.0</version>
