Implemented file storage in backend

--- a/backend/kas/src/main/resources/application.properties
+++ b/backend/kas/src/main/resources/application.properties
@@ -11,8 +11,10 @@ spring.servlet.multipart.max-request-size=215MB
 spring.profiles.active=demo
 
 # Database config stuff, purely for local testing
+spring.datasource.username=sa
+spring.datasource.password=
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
