--- a/backend/kas/pom.xml
+++ b/backend/kas/pom.xml
@@ -24,6 +24,11 @@
 			<version>4.13.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.modelmapper</groupId>
