Closes #52, closes #53, closes #54, closes #55, closes #58, closes #59, closes #60, closes #61, closes #62, closes #63

--- a/backend/kas/src/main/resources/application.properties
+++ b/backend/kas/src/main/resources/application.properties
@@ -18,3 +18,9 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
+
+#app props
+Kas.app.jwtSecret = KasSecretKey
+Kas.app.jwtExpirationMs = 86400000
+Kas.app.tokenBearer = Bearer
+spring.batch.job.enabled=false
