--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -14,14 +14,17 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
     "nanoid": "^3.3.1",
+    "postcss-cli": "^9.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "tailwindcss": "^3.0.23",
+    "tw-elements": "^1.0.0-alpha11",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
