password creation link sent to user upon user creation

--- a/backend/kas/src/main/resources/application.properties
+++ b/backend/kas/src/main/resources/application.properties
@@ -20,7 +20,16 @@ spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
 
 #app props
-Kas.app.jwtSecret = KasSecretKey
-Kas.app.jwtExpirationMs = 86400000
-Kas.app.tokenBearer = Bearer
+Kas.app.jwtSecret=KasSecretKey
+Kas.app.jwtExpirationMs=86400000
+Kas.app.tokenBearer=Bearer
 spring.batch.job.enabled=false
+#5 uur 's ochtends. wakey wakey
+purge.cron.expression= 0 0 5 * * ?
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=noreplay.omega@gmail.com
+spring.mail.password=eJhmbSVJNbSp2Kt
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
