--- a/backend/kas/src/main/resources/application.properties
+++ b/backend/kas/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.servlet.multipart.max-file-size=200MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=215MB
 
+server.servlet.context-path=/api/v1
+server.error.include-message=always
+server.error.include-binding-errors=always
+
 # Huidige actieve profile
 spring.profiles.active=demo
 
