--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
+    "@reduxjs/toolkit": "^1.8.1",
     "@tailwindcss/forms": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -18,12 +19,16 @@
     "axios": "^0.26.0",
     "nanoid": "^3.3.1",
     "postcss-cli": "^9.1.0",
-    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "tailwindcss": "^3.0.23",
     "tw-elements": "^1.0.0-alpha11",
     "typescript": "^4.5.5",
@@ -54,6 +59,10 @@
     ]
   },
   "devDependencies": {
-    "@types/prop-types": "^15.7.4"
+    "@types/lodash": "^4.14.182",
+    "@types/react-redux": "^7.1.23",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "typesafe-actions": "^5.1.0"
   }
 }
