--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
+    "@react-pdf/renderer": "^2.1.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@tailwindcss/forms": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.2",
