--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.3",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
     "@react-pdf/renderer": "^2.1.1",
@@ -16,10 +17,13 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
-    "autoprefixer": "^10.4.2",
-    "axios": "^0.26.0",
-    "nanoid": "^3.3.1",
+    "assert": "^2.0.0",
+    "autoprefixer": "^10.4.7",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "postcss": "^8.4.13",
     "postcss-cli": "^9.1.0",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.8",
@@ -30,9 +34,10 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
-    "tailwindcss": "^3.0.23",
+    "stream-browserify": "^3.0.0",
     "tw-elements": "^1.0.0-alpha11",
     "typescript": "^4.5.5",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -64,6 +69,8 @@
     "@types/react-redux": "^7.1.23",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
-    "typesafe-actions": "^5.1.0"
+    "tailwindcss": "^3.0.24",
+    "typesafe-actions": "^5.1.0",
+    "webpack-cli": "^4.9.2"
   }
 }
