--- a/backend/kas/src/main/resources/application.properties
+++ b/backend/kas/src/main/resources/application.properties
@@ -33,7 +33,7 @@ purge.cron.expression= 0 0 5 * * ?
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=noreplay.omega@gmail.com
+spring.mail.username=noreplay.fba@gmail.com
 spring.mail.password=eJhmbSVJNbSp2Kt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
